fixed scrollbar of routePathInfoTab & routePathLinkTab

--- a/src/components/sidebar/routePathView/routePathListTab/routePathLinksTab.scss
+++ b/src/components/sidebar/routePathView/routePathListTab/routePathLinksTab.scss
@@ -2,15 +2,15 @@
 @import '../../../shared/styles/flexbox';
 @import '../../../shared/styles/form';
 
-.routePathLinksView {
+.RoutePathLinksTabView {
     display: flex;
     flex-direction: column;
     font-weight: bold;
     color: $labelColor;
     font-size: $mediumFontSize;
+    overflow-y: auto;
 
     .contentWrapper {
-        overflow-y: auto;
         padding-left: 10px;
         padding-right: 10px;
     }
